--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background-color: black;
 }
+html {
+  scroll-behavior: smooth;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
